Fix masthead image not showing

--- a/web/app/themes/catch-gare2/style.css
+++ b/web/app/themes/catch-gare2/style.css
@@ -54,7 +54,7 @@ a:hover{
 
 #masthead{
     background-color: white;
-    background-image: url('http://vivregaresnordest.dev/app/uploads/2015/11/gares3.png');
+    background-image: url('http://178.62.64.58/app/uploads/2015/11/gares3.png');
     background-repeat: no-repeat;
     background-position: top center;
     background-attachment: fixed;
